packages/ignition/src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
  --icons-fade: linear-gradient(90deg, #fff 65%, transparent);
  --scrollbar-track-bg: theme("colors.slate.100");
  --scrollbar-track-thumb: theme("colors.slate.300");
  --dark-scrollbar-track-bg: theme("colors.slate.900");
  --dark-scrollbar-track-thumb: theme("colors.slate.700");
}

* {
  scrollbar-gutter: stable;
}

html {
  height: -webkit-fill-available;
}

::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

::-webkit-scrollbar-track {
  background: var(--scrollbar-track-bg);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb {
  opacity: 0.8;
  background: var(--scrollbar-track-thumb);
  border-radius: 5px;
}

::-webkit-scrollbar-thumb:hover {
  opacity: 1;
}

.thin-scroll::-webkit-scrollbar {
  width: 1px;
  height: 1px;
}
.thin-scroll::-webkit-scrollbar-track {
  border-radius: 1px;
}

.thin-scroll::-webkit-scrollbar-thumb {
  border-radius: 1px;
}

.dark ::-webkit-scrollbar-track {
  background: var(--dark-scrollbar-track-bg);
}

.dark ::-webkit-scrollbar-thumb {
  background: var(--dark-scrollbar-track-thumb);
}

@layer componenets {
  .theme-selector,
  .modal-context {
    min-height: 100vh;
    /* mobile viewport bug fix */
    min-height: -webkit-fill-available;
  }

  .content-area {
    height: 100%;
  }

  @media (max-width: 1024px) {
    .icon-info-area {
      height: calc(100vh - theme(height.20));
    }
  }

  @media (min-width: 1024px) {
    .content-area {
      height: calc(100vh - theme(height.16));
      overflow: hidden;
    }
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

